demo/001-echo-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: echo
spec:
  ports:
    - port: 5678
  selector:
    app: echo
    task: echo

---
kind: Pod
apiVersion: v1
metadata:
  name: echo
  labels:
    app: echo
    task: echo
spec:
  containers:
    - name: echo
      image: hashicorp/http-echo
      args:
        - "-text='hello world!'"
