demo/002-whoami-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: whoami
    task: whoami
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami
  labels:
    app: whoami
    name: whoami
spec:
  selector:
    matchLabels:
      app: whoami
      task: whoami
  template:
    metadata:
      labels:
        app: whoami
        task: whoami
    spec:
      containers:
        - name: containouswhoami
          image: containous/whoami
          ports:
            - containerPort: 80
